# E-Sift

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_PYTHON.md  CHANGELOG.md  CMakeLists.txt  COMPILATION_SUMMARY.md  CONFIG_USAGE.md  EXTERNAL_CONTEXT_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_PYTHON.md  SAFE_USAGE_GUIDE.md  TODO.md  api_usage_guide.py  build.sh  build_verbose.sh  cuda_sift_template.py  debug_threshold.py  demo_external_context.py  resolution_investigation.py  run_tests.sh  test_dual_mode.py  test_efficient_api.py  test_external_context.py  test_fixed_matching.py  test_pycuda_integration.py  test_stream_direct.py
config/: sift_config.txt  sift_config_simple.txt  test_config.txt
data/: limg_pts.pgm
docs/: API_REFERENCE.md  INTEGRATION_GUIDE.md  OPTIMIZED_USAGE_GUIDE.md  PARAMETER_TUNING_GUIDE.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STRUCTURE.md  README_PYTHON.md  TODO.md  快速上手.md  接口参考.md  构建指南.md  配置与调参.md
docs/dev_notes/debug_scripts/: cuda_block_analysis.py  cuda_issue_final_summary.py  memory_analysis.py  performance_summary_report.py  scaledown_fix_analysis.py  stage1_final_report.py  user_scenario_optimization.py  verify_cuda_analysis.py
include/esift/: esift.h  features.h  image.h  matching.h
python/: CMakeLists.txt  __init__.py  pycuda_sift_api.py  setup.py  sift_bindings.cpp
python/examples/: advanced_demo.py  basic_usage.py  demo.py  demo_api_usage.py  demo_external_context.py  demo_external_simple.py  external_context_usage.py
python/tests/: README.md  test_basic_functionality.py  test_config_paths.py  test_context_behavior.py  test_cuda_init.py  test_fix_and_summary.py  test_functionality.py  test_performance.py  test_pycuda_minimal.py  test_python_api.py  test_python_bindings.py  test_safe_performance.py  test_siftconfig_constructor.py
src/: cudaSiftD.h  cudaSiftH.cu  cudautils.h  mainSift.cpp  mainSift_txt.cpp  match.cu  siftConfigTxt.cpp  siftConfigTxt.h  visualizer.cpp  visualizer.h
src/apps/: CMakeLists.txt  mainSift.cpp
src/core/: CMakeLists.txt  match.cu
src/utils/: CMakeLists.txt
test/: cuda_device_query.py  cuda_issue_summary.py  final_problem_confirmation.py  match_diagnosis.py  performance_benchmark.py  resolution_investigation.py  scaledown_fix_verification.py  stage1_complete_validation.py  test_real_data_complete.py  user_scenario_optimization.py  verify_scaledown_fix.py
tests/: CMakeLists.txt
tmp/: complete_test_results.json
